# mila-docs

./: .btd-upstream.yml  .btd.yml  .buildinfo  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  404.html  Acknowledgement.html  Acknowledgement.rst  Acknowledgement_text.html  Audio_video.html  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Chatbot.html  Cheatsheet.html  Environmental_impact.html  Extra_compute.html  Extra_compute_drac.rst  Getting_started.html  Handbook.html  Handbook_frameworks.html  Handbook_hpo.html  Handbook_rl.html  Handbook_tracking.html  IDT.html  IDT_mission.rst  Information.html  Information_data_transmission.html  Information_data_transmission.rst  Information_datasets.html  Information_monitoring.html  Information_naming_schema.html  Information_nodes.html  Information_nodes.rst  Information_rd_projects.html  (+58 more)
.claude/: .gitignore  README.md
.github/: LICENSE.md  launch_actions_runner.sh  setup_github_runner.sh
.mkdocs/: .readthedocs.yaml
Acknowledgement/: index.html
Acknowledgement_text/: index.html
Audio_video/: index.html
CONTRIBUTING/: index.html
Cheatsheet/: index.html
Environmental_impact/: index.html
Extra_compute/: index.html
Extra_compute_University/: index.html
Extra_compute_drac/: index.html
Extra_compute_industry/: index.html
Extra_compute_large/: index.html
Getting_started/: index.html
Handbook/: index.html
Handbook_frameworks/: index.html
Handbook_hpo/: index.html
Handbook_rl/: index.html
Handbook_tracking/: index.html
IDT/: index.html
IDT_history/: index.html
IDT_mission/: index.html
IDT_software/: index.html
IDT_team/: index.html
Information/: index.html
Information_data_transmission/: index.html
Information_datasets/: index.html
Information_monitoring/: index.html
Information_naming_schema/: index.html
Information_nodes/: index.html
Information_rd_projects/: index.html
Information_roles_and_resources/: index.html
Information_sharing_policies/: index.html
Information_software_management/: index.html
Information_storage/: index.html
Information_support_level/: index.html
Purpose/: index.html
Purpose_audience/: index.html
Theory_cluster/: index.html
Theory_cluster_batch_scheduling/: index.html
Theory_cluster_data/: index.html
Theory_cluster_parts/: index.html
Theory_cluster_software_deps/: index.html
Theory_cluster_specifics_ai/: index.html
Theory_cluster_unix/: index.html
Theory_cluster_workflow/: index.html
Userguide_HPO/: index.html
Userguide_cluster_access/: index.html
Userguide_comet/: index.html
Userguide_comms/: index.html
Userguide_containers/: index.html
Userguide_data_transfer/: index.html
Userguide_datasets/: index.html
Userguide_debugging/: index.html
Userguide_faq/: index.html
Userguide_infra_choice/: index.html
Userguide_jupyterhub/: index.html
Userguide_login/: index.html
Userguide_login_mfa/: index.html
Userguide_multigpu/: index.html
Userguide_multinode/: index.html
Userguide_portability/: index.html
Userguide_portability_modules/: index.html
Userguide_python/: index.html
Userguide_quick_start/: index.html
Userguide_quick_start_my_first_job/: index.html
Userguide_quick_start_train_first_model/: index.html
Userguide_running_code/: index.html
Userguide_sharing_data/: index.html
Userguide_singularity/: index.html
Userguide_singularity_building/: index.html
Userguide_singularity_on_clusters/: index.html
Userguide_singularity_overview/: index.html
Userguide_wandb/: index.html
VSCode/: index.html
_sources/: Acknowledgement.rst.txt  Audio_video.rst.txt  Cheatsheet.rst.txt  Handbook.rst.txt  Information_roles_and_resources.rst.txt  Information_storage.rst.txt  Purpose.rst.txt  Userguide.rst.txt  Userguide_containers.rst.txt  Userguide_login.rst.txt  Userguide_portability.rst.txt  Userguide_portability_modules.rst.txt  Userguide_quick_start.rst.txt  Userguide_sharing_data.rst.txt  Userguide_singularity_overview.rst.txt  index.rst.txt
_static/: custom.css  documentation_options_fix.js
ai/: index.html
docs/: .meta.yml  Acknowledgement.md  Acknowledgement_summary.md  Acknowledgement_text.md  Acknowledgement_text.rst  Audio_video.md  Audio_video.rst  CONTRIBUTING.md  Chatbot.rst  Cheat_sheet.rst  Cheatsheet.md  Cheatsheet.rst  Environmental_impact.md  Environmental_impact.rst  Extra_compute.md  Extra_compute.rst  Extra_compute_cc.rst  Extra_compute_drac.md  Extra_compute_drac.rst  Extra_compute_large.rst  Getting_started.md  Getting_started.rst  Handbook.md  Handbook_hpo.rst  IDT.md  IDT.rst  IDT_mission.md  IDT_team.md  IDT_team.rst  Information.md  Information.rst  Information_data_transmission.md  Information_data_transmission.rst  Information_monitoring.md  Information_monitoring.rst  Information_nodes.md  Information_nodes.rst  Information_resources.rst  Information_roles.rst  Information_roles_and_resources.md  (+90 more)
docs/examples/LLMs/accelerate_example/: README.rst  accelerate_launch.sh  index.rst  job.sh  main.py  pyproject.toml
docs/examples/advanced/LLM_training/: .gitignore  README.md  job.sh  main.py  pyproject.toml
docs/examples/advanced/LLM_training/configs/: ds_level2.yaml  ds_level3.yaml  ds_level3_nooffloading.yaml  fsdp.yaml
docs/examples/advanced/imagenet/: .gitignore  README.md  README.rst  code_checkpointing.sh  index.md  index.rst  job.sh  job_fir.sh  job_tamia.sh  main.py  prepare_data.py  pyproject.toml  pyproject_drac.toml  safe_sbatch  uv_drac.toml
docs/examples/frameworks/flash_attn_setup/: index.md  job.sh  main.py  pyproject.toml
docs/examples/frameworks/flash_attn_setup/build_from_source/: job.sh  pyproject.toml
docs/examples/frameworks/flash_attn_setup/from_pre_build_wheel/: pyproject.toml
examples/: generate_diffs.sh  header.html  hpo_launcher.sh  preprocess.py
examples/frameworks/jax/: index.html  job.sh  main.py  model.py  pyproject.toml
examples/good_practices/hpo_with_orion/: README.rst  index.html  job.sh  job.sh.diff  main.py.diff  pyproject.toml
generated_from_config/: index.html
(+569 files in other folders)
