[project]
name = "mila-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-include-markdown-plugin>=7.2.1",
]

[tool.uv.workspace]
members = [
    "docs/examples/frameworks/pytorch_setup",
    "docs/examples/frameworks/jax_setup",
    "docs/examples/frameworks/jax",
    "docs/examples/distributed/single_gpu",
    "docs/examples/distributed/multi_gpu",
    "docs/examples/distributed/multi_node",
    "docs/examples/advanced/imagenet",
    "docs/examples/good_practices/checkpointing",
    # Add back when Orion is compatible with Python >=3.12
    # "docs/examples/good_practices/hpo_with_orion",
    "docs/examples/good_practices/launch_many_jobs",
    "docs/examples/good_practices/many_tasks_per_gpu",
    "docs/examples/good_practices/slurm_job_arrays",
    "docs/examples/good_practices/wandb_setup",
]

[dependency-groups]
dev = [
    "myst-parser>=0.14.0",
    "pre-commit>=4.2.0",
    "recommonmark>=0.7.1",
    "rstcheck[sphinx]>=6.2.5",
    "sphinx>=4.0.2",
    "sphinx-copybutton>=0.3.1",
    "sphinx-lint>=1.0.0",
    "sphinx-prompt>=1.4.0",
    "sphinx-readable-theme>=1.3.0",
    "sphinx-rtd-theme>=0.5.2",
    "sphinx-theme>=1.0",
    "urllib3<2",
]
test = [
    "pytest>=9.0.1",
    "pytest-regressions>=2.8.3",
    "pytest-xdist>=3.8.0",
    "setuptools>=80.9.0",
    "submitit>=1.5.3",
]

[tool.hatch.envs.hatch-test]
installer = "uv"
dependency-groups = ["dev", "test"]
post-install-commands = ["uv sync --group test --inexact"]

[tool.hatch.envs.hatch-test.extra-scripts]
uv = 'UV_PROJECT_ENVIRONMENT="{env:VIRTUAL_ENV}" "$(which uv)" {args}'
