[project]
name = "llm-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.18.0",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "rich>=14.2.0",
    "simple-parsing>=0.1.7",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
