[project]
name = "distributed-imagenet-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.16",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "simple-parsing>=0.1.7",
    "torch>=2.8.0",
    "torch-tb-profiler>=0.4.3",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

#ruff: increase max line length
[tool.ruff]
line-length = 100
