[project]
name = "distributed-imagenet-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "debugpy>=1.8.16",
    "grpcio>=1.75.0",           # this is only here because we want it to be explicitly taken from PyPI on DRAC clusters
    "scipy>=1.16.2",
    "torch>=2.7.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.2",
]

#ruff: increase max line length
[tool.ruff]
line-length = 100
