[project]
name = "flash-attn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "torch>=2.7.0",
    "flash-attn>=2.8.3",
    "numpy"
]

[tool.uv]
no-build-isolation-package = ["flash_attn"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = {
    MAX_JOBS = "1",
    FLASH_ATTENTION_SKIP_CUDA_BUILD = "0",
    TORCH_CUDA_ARCH_LIST = "9.0"
}